impleme backgammon backend & fix larrrrrrrrge bug